--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.csv
+*.pkl
+*.h5
+__pycache__/
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
